# fastapi-web-tutorial

./: .gitignore  README.md  init_db.sh  pyproject.toml
planner/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  planner.db  pytest.ini  requirements.txt
planner/auth/: authenticate.py  hash_password.py  jwt_handler.py
planner/database/: connection.py
planner/models/: events.py  users.py
planner/routes/: events.py  users.py
planner/store/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-4344499262724320377.wt  collection-2-4344499262724320377.wt  collection-4-4344499262724320377.wt  collection-7-4344499262724320377.wt  index-1-4344499262724320377.wt  index-3-4344499262724320377.wt  index-5-4344499262724320377.wt  index-6-4344499262724320377.wt  index-8-4344499262724320377.wt  sizeStorer.wt
planner/store/diagnostic.data/: metrics.2023-11-30T11-13-26Z-00000
planner/tests/: conftest.py  test_login.py  test_routes.py
todos/: api.py  model.py  todo.py
todos/templates/: home.html  todo.html
